Tue Mar 11 21:17:56 GMT 2003  Giuseppe Sacco  <eppesuig@debian.org>

	* po/it.po: Update.

Mon Mar 10 17:20:46 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* libdb/db_btree.c, libdb/db_delete.c, libdb/db_gdbm.c,
	  libdb/db_lookup.c, libdb/db_ndbm.c, libdb/db_storage.h,
	  libdb/db_store.c, libdb/db_ver.c: Style cleanup (as with src/* on
	  28 May 2001). No functional changes.

Mon Mar 10 15:55:34 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in (EVERYTHING, ALL): Move intl ahead of libdb. (Not
	  'make -j'-clean, though ...)
	* libdb/Makefile.in: Use '$(top_srcdir)' rather than '..'
	  throughout. Add $(top_srcdir)/intl to the include path if USE_NLS
	  is set.

Mon Mar 10 15:24:04 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* configure.in (AC_CONFIG_HEADER): Generate config.h rather than
	  include/config.h. intl/Makefile.in is insistent on config.h being
	  in the top-level directory.
	* GNUmakefile.in, manual/comp.me: Replace 'include/config.h' with
	  'config.h' throughout.
	* .cvsignore, include/.cvsignore: Update for new config.h and
	  config.h.in locations.

Mon Mar 10 15:00:32 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* lib/mkdtemp.c: Define __GT_DIR if necessary.
	* lib/tempfile.c: Prototype mkstemp() and mkdtemp().

Mon Mar 10 14:46:39 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* lib/tempname.c: Include "config.h" rather than <config.h>.

Mon Mar  3 22:00:03 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (xcopy): Remove silly calls to fclose() on null
	  pointers.

Sun Mar  2 20:37:08 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (xcopy): Save errno before performing operations that
	  might change it. Close ifp as well if an error occurs while
	  opening ofp.

Fri Feb 28 01:50:21 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/man.c (find_in_path): path needs to be preserved in order to
	  be freed safely, or else we segfault. Use a temporary variable for
	  strsep() instead.
