@@ -1,3 +1,9 @@
+Wed Mar 12 13:17:45 GMT 2003  Colin Watson  <cjwatson@debian.org>
+
+	* libdb/db_lookup.c (gripe_bad_multi_key): This function has been
+	  unused since 24 June 2002 (noticed by Giuseppe Sacco). Remove.
+	* libdb/db_storage.h (gripe_bad_multi_key): Remove prototype.
+
 Tue Mar 11 21:17:56 GMT 2003  Giuseppe Sacco  <eppesuig@debian.org>
 
 	* po/it.po: Update.
